# wattpad-scope

./: CMakeLists.txt  README.md  manifest.json.in
po/: CMakeLists.txt  Makefile.in.in  POTFILES.in  POTFILES.in.in  wattpad.pot
src/: CMakeLists.txt  wattpad.js
src/data/: wattpad-settings.ini.in  wattpad.ini.in
